# codeforces

./: .gitignore  .python-version  0001A.py  0001B.py  0001C.py  0002A.py  0002B.py  0002C.py  0003A.py  0003C.py  0004B.py  0004C.py  0009A.py  0022A.py  0025A.py  0032B.py  0034B.py  0038A.py  0043A.py  0050A.py  0058A.py  0059A.py  0061A.py  0069A.py  0071A.py  0080A.py  0096A.py  0110A.py  0112A.py  0116A.py  0118A.py  0122A.py  0131A.py  0133A.py  0136A.py  0141A.py  0144A.py  0148A.py  0151A.py  0155A.py  (+689 more)
acm/: 100.py  102.py  105.py  112.py  123.py  154.py  180.py  184.py  231.py  358.py  403.py  404.py  460.py  486.py
edu/: 2_5_A.py
git_hooks/: pre-commit
problems/: 0001A.py  0001B.py  0001C.py  0002A.py  0002B.py  0003A.py  0003C.py  0004B.py  0009A.py  0020C.py  0026A.py  0026B.py  0027A.py  0032B.py  0034A.py  0038A.py  0041A.py  0043A.py  0050A.py  0066B.py  0082A.py  0110A.py  0116A.py  0119A.py  0124A.py  0126B.py  0129A.py  0131A.py  0139A.py  0144A.py  0149A.py  0155A.py  0165A.py  0214A.py  0217A.py  0219A.py  0227B.py  0228A.py  0230A.py  0230B.py  (+616 more)
python/: 0001B.py  0002B.py  0002C.py  0003A.py  0003B.py  0004A.py  0004C.py  0006A.py  0025A.py  0037A.py  0039J.py  0059A.py  0061A.py  0066B.py  0069A.py  0071A.py  0075A.py  0096A.py  0102B.py  0115A.py  0118B.py  0122A.py  0136A.py  0141A.py  0148A.py  0158A.py  0160A.py  0166E.py  0199A.py  0200B.py  0205A.py  0217A.py  0224A.py  0237A.py  0248A.py  0255A.py  0258A.py  0265A.py  0266B.py  0268B.py  (+598 more)
scripts/: add_rust_test.py  duplicates.py  missing.py  paste.py  ruffify.py  similarities.pkl  similarity.py  templatize.py  use_on_top.py
src/: fenwick_tree.rs  fixed.rs  graph.rs  lib.rs  read_macro.rs
tests/: test_all.rs  test_all_problems.rs  test_problems.rs
