[package]
name = "codeforces"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
assert_cmd = "2.2"
regex = "1.12.4"

[lints.clippy]
# warn or deny all lints by default
cargo = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# disable useless lints
absolute_paths = "allow"
allow_attributes_without_reason = "allow"
arbitrary_source_item_ordering = "allow"
arithmetic_side_effects = "allow"
blanket_clippy_restriction_lints = "allow"
cargo_common_metadata = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
default_numeric_fallback = "allow"
else_if_without_else = "allow"
expect_used = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
integer_division = "allow"
integer_division_remainder_used = "allow"
many_single_char_names = "allow"
map_unwrap_or = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"
print_stdout = "allow"
question_mark_used = "allow"
redundant_test_prefix = "allow"
shadow_reuse = "allow"
single_call_fn = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
string_slice = "allow"
suboptimal_flops = "allow"
unseparated_literal_suffix = "allow"
unwrap_used = "allow"
